[package]
name = "ext4nfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.4.5", features = ["derive"] }
ext4 = "0.9.0"
nfsserve = "0.10.1"
tokio = "1.32.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
